tests/snapshots/compiler_tests__arithmetic.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

func @add( i32 %a,  i32 %b) {
bb0:
    %a.addr = alloca i32 , align 4
    store %a, ptr %a.addr, align 4, ty i32
    %b.addr = alloca i32 , align 4
    store %b, ptr %b.addr, align 4, ty i32
    %0 = load i32, ptr %a.addr, align 4
    %1 = load i32, ptr %b.addr, align 4
    %2 = add %0, %1
    ret %2
}

func @subtract( i32 %a,  i32 %b) {
bb1:
    %a.addr = alloca i32 , align 4
    store %a, ptr %a.addr, align 4, ty i32
    %b.addr = alloca i32 , align 4
    store %b, ptr %b.addr, align 4, ty i32
    %3 = load i32, ptr %a.addr, align 4
    %4 = load i32, ptr %b.addr, align 4
    %5 = sub %3, %4
    ret %5
}

func @addassign() {
bb2:
    %x = alloca i32 , align 4
    store 100, ptr %x, align 4, ty i32
    %6 = load i32, ptr %x, align 4
    %7 = add %6, 11
    store %7, ptr %x, align 4, ty i32
    %8 = load i32, ptr %x, align 4
    ret %8
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (1):
--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 0)
--------------------------------------------------
  [0000] return

==================================================
