tests/snapshots/compiler_tests__arithmetic_basic.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

<func0>  func @foo() {
bb0:
    %x = alloca isize , align 8
    %1 = $$eval @$$scope_0
    store %1, ptr %x, align 8, ty isize
    ret 0
}

<func1>  $$func @$$scope_0() {
bb1:
    %0 = add 1, 3
    ret %0
}

=== BYTECODE MODULE ===
Globals (0):
  (none)

Functions (2):
--------------------------------------------------
func @$$scope_0 (mode: Full, params: 0, registers: 3)
--------------------------------------------------
  [0000] r1 = 1 (isize) 
  [0001] r2 = 3 (isize) 
  [0002] r0 = r1 + r2
  [0003] return r0

--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 1)
--------------------------------------------------
  [0000] r0 = $$eval @$$scope_0()
  [0001] return

==================================================
