tests/snapshots/compiler_tests__const_binding_mut_type.snap
---
source: tests/compiler_tests.rs
expression: output
---
=== MIR OUTPUT ===
module "test_module"

global @x const: i32 = 1
global @y const: i32 = 1

<func0>  func @read_them() {
bb0:
    %a = alloca i32 , align 4
    store 1, ptr %a, align 4, ty i32
    %b = alloca i32 , align 4
    store 1, ptr %b, align 4, ty i32
    %0 = load i32, ptr %a, align 4
    %1 = load i32, ptr %b, align 4
    %2 = add %0, %1
    ret %2
}

=== BYTECODE MODULE ===
Globals (2):
  @0: "x" (4 bytes) [init: 1]
  @1: "y" (4 bytes) [init: 1]

Functions (1):
--------------------------------------------------
func @@$top_level (mode: Full, params: 0, registers: 0)
--------------------------------------------------
  [0000] return

==================================================
